name:                gloss-counter
version:             0.1.0.0
license-file:        LICENSE
author:              Amber Elferink and Marieke van der Plaat
maintainer:          amber.elferink@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gloss-counter
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       QuickCheck,
                       aeson,
                       bytestring,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall